<?xml version="1.0"?>
<package>
  <name>rosgo_messages</name>
  <version>0.0.0</version>
  <description>The rosgo_messages package</description>

  <maintainer email="akio7141@gmail.com">Akiyoshi Ochiai</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gengo</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
